# spyglys

./: :w  Cargo.toml  README.md  lithuanian.spyglys
benches/: lithuanian_verb_simplification.rs
examples/: handle_whitespace.spyglys  html_parsing.spyglys  lithuanian.spyglys  using_builtin_functions.spyglys
src/: formatter.rs  interpreter.rs  lib.rs  main.rs  parser.rs
src/snapshots/: spyglys__parser__test__lexing_basic.snap  spyglys__parser__test__lexing_multiple_keywords.snap  spyglys__parser__test__parsing_adding_strings.snap  spyglys__parser__test__parsing_builtin.snap  spyglys__parser__test__parsing_builtin_in_func.snap  spyglys__parser__test__parsing_complex_call.snap  spyglys__parser__test__parsing_complex_function_def.snap  spyglys__parser__test__parsing_function_where_loop.snap  spyglys__parser__test__parsing_iterator_empty.snap  spyglys__parser__test__parsing_iterator_no_trailing_comma.snap  spyglys__parser__test__parsing_simple_call.snap  spyglys__parser__test__parsing_simple_function_def.snap  spyglys__parser__test__parsing_simple_function_where.snap  spyglys__parser__test__parsing_unicode_ident.snap
