[package]
name = "spyglys"
version = "0.1.1"
edition = "2021"
license-file = "LICENSE"
repository = "https://github.com/brewingweasel/spyglys"
description = "A simple programming language for text manipulation"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.7", features = ["derive"], optional = true }
pretty = "0.12.3"
reedline = { version = "0.32.0", optional = true }
regex = "1.10.5"

[features]
binary = ["reedline", "clap"]

[dev-dependencies]
insta = "1.39.0"

[[bin]]
name = "spyglys"
required-features = ["binary"]
