[package]
name = "spyglys"
version = "0.2.3"
edition = "2021"
license-file = "LICENSE"
repository = "https://github.com/brewingweasel/spyglys"
description = "A simple programming language for text manipulation"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.7", features = ["derive"], optional = true }
dashmap = "6.0.1"
pretty = "0.12.3"
reedline = { version = "0.32.0", optional = true }
regex = "1.10.5"

[features]
binary = ["reedline", "clap"]

[dev-dependencies]
criterion = "0.5.1"
insta = "1.39.0"

[[bin]]
name = "spyglys"
required-features = ["binary"]

[[bench]]
name = "lithuanian_verb_simplification"
harness = false
